--- a/Grade Improvement.ipynb
+++ b/Grade Improvement.ipynb
@@ -2,27 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6012:\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-4e11a311cda7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m \u001b[0mcalculate_improvement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/StudentData7160_6012.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6012\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m \u001b[0mcalculate_improvement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/StudentData7160_7014.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7014\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0mcalculate_improvement\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/StudentData7160_7160.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7160\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-50-4e11a311cda7>\u001b[0m in \u001b[0;36mcalculate_improvement\u001b[0;34m(filepath, schoolnum)\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mpoints\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mcalc_difference\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirstNineWeeks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecondNineWeeks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m     \u001b[0mmake_excel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mschoolnum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-50-4e11a311cda7>\u001b[0m in \u001b[0;36mmake_excel\u001b[0;34m(data_list, school_num)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m             \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+      "71602:\n",
+      "60122:\n",
+      "70142:\n"
      ]
     }
    ],
@@ -36,7 +25,7 @@
     "        writer = csv.writer(csvfile, dialect='excel')\n",
     "\n",
     "        for i in data_list:\n",
-    "            writer.writerow(data_list[i][0] )\n",
+    "            writer.writerow(i)\n",
     "            \n",
     "    \n",
     "def calc_difference(first,second):\n",
@@ -86,10 +75,12 @@
     "            firstNineWeeks = row[5]\n",
     "            secondNineWeeks = row[6]\n",
     "            checkID = row[0]\n",
+    "            name = row[3] + \" \"+ row[4]\n",
+    "            grade = row[2]\n",
     "\n",
     "            if (IDnum != checkID):\n",
     "\n",
-    "                l.append((IDnum,points))\n",
+    "                l.append([IDnum,grade, name, points])\n",
     "                points = 0\n",
     "                IDnum = checkID\n",
     "            \n",
@@ -103,10 +94,17 @@
     "            \n",
     "            \n",
     "\n",
-    "calculate_improvement('./data/StudentData7160_6012.csv', 6012)\n",
-    "calculate_improvement('./data/StudentData7160_7014.csv', 7014)\n",
-    "calculate_improvement('./data/StudentData7160_7160.csv',7160)"
+    "calculate_improvement('./data/StudentData_7160.csv' , 71602)\n",
+    "calculate_improvement('./data/StudentData_6012.csv',60122)\n",
+    "calculate_improvement('./data/StudentData_7014.csv',70142)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
