updated based on columns and file name

--- a/Grade Improvement.ipynb
+++ b/Grade Improvement.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
     "    with open(filepath) as file:\n",
     "        reader = csv.reader(file)\n",
     "        reader.__next__()\n",
-    "        num = reader.__next__()[0]\n",
+    "        num = reader.__next__()[1] # represents id column\n",
     "    return num\n",
     "\n",
     "# Making csv out of analyzed data from calculate improvement\n",
@@ -103,7 +103,17 @@
     "# if there's no change then return 0.\n",
     "def calculate_improvement(filepath):\n",
     "    analysis = []\n",
-    "    filepath = data_to_csv(filepath)\n",
+    "#     filepath = data_to_csv(filepath)\n",
+    "    \n",
+    "    \n",
+    "    first_nine_weeks = 5\n",
+    "    second_nine_weeks = first_nine_weeks+1\n",
+    "    \n",
+    "    first_name_col = 3\n",
+    "    last_name_col = 2\n",
+    "    grade_col = 0\n",
+    "    \n",
+    "    id_col = 1\n",
     "    \n",
     "    with open(filepath) as file:\n",
     "        reader = csv.reader(file)\n",
@@ -114,21 +124,23 @@
     "        IDnum = get_firstID(filepath) # get the first ID to start off the algo\n",
     "\n",
     "        for row in reader:\n",
-    "    \n",
-    "            firstNineWeeks = row[5]\n",
-    "            secondNineWeeks = row[6]\n",
-    "            checkID = row[0]\n",
-    "            name = row[3] + \" \"+ row[4]\n",
-    "            grade = row[2]\n",
+    "            \n",
+    "            firstNineWeeks = row[first_nine_weeks] \n",
+    "            secondNineWeeks = row[second_nine_weeks]\n",
+    "            checkID = row[id_col]\n",
+    "            name = row[first_name_col] + \" \"+ row[last_name_col] # indices of first and last name\n",
+    "            grade = row[grade_col]\n",
     "\n",
     "            if (IDnum != checkID): # when we reach a new ID Num, add current information to the output file and reset info\n",
-    "                analysis.append([pre[0],pre[2], pre[3]+ \" \" +pre[4] , points])\n",
+    "                analysis.append([pre[id_col],pre[grade_col], pre[first_name_col]+ \" \" +pre[last_name_col] , points])\n",
     "                points = 0\n",
     "                IDnum = checkID\n",
     "            \n",
     "            points += calc_difference(firstNineWeeks, secondNineWeeks)\n",
     "            pre = row\n",
-    "    make_excel(analysis,filepath)\n"
+    "            \n",
+    "    modifier_index = filepath.rfind('.csv')\n",
+    "    make_excel(analysis,filepath[0:modifier_index] + \"-analyzed.csv\")\n"
    ]
   },
   {
@@ -140,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,17 +187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data_to_csv('./data/7160.xlsx')\n",
     "\n",
-    "calculate_improvement('./data/7160.xlsx')\n",
+    "calculate_improvement('./data-2020/7160.csv')\n",
+    "calculate_improvement('./data-2020/7014.csv')\n",
+    "calculate_improvement('./data-2020/6012.csv')\n",
     "# clean_files(output)\n",
     "\n",
     "# calculate_improvement\n",
-    "# continuous_improvement('./data/6012_q1.csv','./data/6012_q2-q3.csv', \"6012_improve\")\n",
+    "# continuous_improvement('./data/7160.csv','./data/6012_q2-q3.csv', \"6012_improve\")\n",
     "# continuous_improvement('./7014_q1.csv','./7014_q2-q3.csv', \"7014_improve\")\n",
     "\n",
     "# continuous_improvement('./data/7014_1.csv', './data/7014.csv', \"7014_continuous_improvement\")\n",
@@ -223,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
